[gd_scene load_steps=19 format=2]

[ext_resource path="res://walk.png" type="Texture" id=1]
[ext_resource path="res://SFSCon.gd" type="Script" id=2]
[ext_resource path="res://jump.png" type="Texture" id=3]
[ext_resource path="res://backgroundForest.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 79 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 79 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 79 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 79 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 79 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 79 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 79 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 79 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 79 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 24, 32 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 24, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 869.456, 128 )

[sub_resource type="RectangleShape2D" id=13]

[node name="SFSCon" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 60.5811, -297.56 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -106.333, -75.8492 )
texture = ExtResource( 4 )
centered = false

[node name="Tux" type="RigidBody2D" parent="."]
position = Vector2( 140.719, 306.439 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Tux"]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tux"]
position = Vector2( 0, 6 )
shape = SubResource( 10 )

[node name="FloorDetector" type="Area2D" parent="Tux"]
position = Vector2( -127.684, -314.699 )
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tux/FloorDetector"]
position = Vector2( 128, 344 )
shape = SubResource( 12 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 15, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 835.722, 475.364 )
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Score" type="Label" parent="."]
margin_left = 467.272
margin_top = 61.5057
margin_right = 507.272
margin_bottom = 75.5057
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointDetector"]
position = Vector2( 62.5083, 306.185 )
shape = SubResource( 13 )

[node name="Instructions" type="Label" parent="."]
margin_left = 230.406
margin_top = 262.36
margin_right = 395.406
margin_bottom = 276.36
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PRESS SPACEBAR TO JUMP"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Tux" to="." method="_on_Tux_body_entered"]
[connection signal="body_entered" from="Tux/FloorDetector" to="." method="_on_FloorDetector_body_entered"]
[connection signal="body_exited" from="Tux/FloorDetector" to="." method="_on_FloorDetector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PointDetector" to="." method="_on_PointDetector_body_entered"]
